--- a/package.json
+++ b/package.json
@@ -1,4 +1,18 @@
+
 {
+  "name": "pre_entrega_backend_flores",
+  "version": "1.0.0",
+  "main": "index.js",
+  "type": "module",
+
+  "scripts": {
+    "dev": "nodemon src/app.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+
   "dependencies": {
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
